{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 626,
  "lineage": "fef12a32-60db-8d9e-8a29-42c7cb66742f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "project-wal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051f7e7f6c2f40dc1",
            "arn": "arn:aws:ec2:us-east-1:153886836866:instance/i-0137c4fc80e783d88",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0137c4fc80e783d88",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03f4c954ebe2cf0e0",
            "private_dns": "ip-10-0-1-58.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.58",
            "public_dns": "ec2-3-231-57-142.compute-1.amazonaws.com",
            "public_ip": "3.231.57.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-045dcea23f5df6cb2",
                "volume_size": 50,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "sg-048e08ff53f67ec22"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e51a2f0d5ef9c286",
            "tags": {
              "Environment": "DEV",
              "Managed": "WAL",
              "Name": "LinuxServ",
              "OS": "UBUNTU"
            },
            "tags_all": {
              "Environment": "DEV",
              "Managed": "WAL",
              "Name": "LinuxServ",
              "OS": "UBUNTU"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-048e08ff53f67ec22"
            ]
          },
          "dependencies": [
            "aws_security_group.project-wal-sg",
            "aws_subnet.wal_private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wal_int_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:153886836866:internet-gateway/igw-0858001056d509a11",
            "id": "igw-0858001056d509a11",
            "owner_id": "153886836866",
            "tags": {
              "Name": "Wal Internet Gateway"
            },
            "tags_all": {
              "Name": "Wal Internet Gateway"
            },
            "vpc_id": "vpc-08b41e68c645b5d80"
          },
          "dependencies": [
            "aws_vpc.wal_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-wal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:153886836866:route-table/rtb-039ab85f6a4569ee8",
            "id": "rtb-039ab85f6a4569ee8",
            "owner_id": "153886836866",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0858001056d509a11",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wal-route-table"
            },
            "tags_all": {
              "Name": "wal-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b41e68c645b5d80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.wal_int_gw",
            "aws_vpc.wal_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b0632dc6bc16e6a",
            "route_table_id": "rtb-039ab85f6a4569ee8",
            "subnet_id": "subnet-0e51a2f0d5ef9c286"
          },
          "dependencies": [
            "aws_internet_gateway.wal_int_gw",
            "aws_route_table.route-table-wal",
            "aws_subnet.wal_private_subnet",
            "aws_vpc.wal_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project-wal-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:153886836866:security-group/sg-048e08ff53f67ec22",
            "description": "WAL-Sec-Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048e08ff53f67ec22",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WAL-Sec-Group",
            "name_prefix": "",
            "owner_id": "153886836866",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08b41e68c645b5d80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wal_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:153886836866:security-group/sg-0f92ee63aded6739b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f92ee63aded6739b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "153886836866",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08b41e68c645b5d80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wal_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wal_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:153886836866:subnet/subnet-0e51a2f0d5ef9c286",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e51a2f0d5ef9c286",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "153886836866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Wal Public Subnet"
            },
            "tags_all": {
              "Name": "Wal Public Subnet"
            },
            "vpc_id": "vpc-08b41e68c645b5d80"
          },
          "dependencies": [
            "aws_vpc.wal_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wal_private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:153886836866:subnet/subnet-00322ac7becc68f83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00322ac7becc68f83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "153886836866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Wal Public Subnet2"
            },
            "tags_all": {
              "Name": "Wal Public Subnet2"
            },
            "vpc_id": "vpc-08b41e68c645b5d80"
          },
          "dependencies": [
            "aws_vpc.wal_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wal_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:153886836866:vpc/vpc-08b41e68c645b5d80",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05f624ecb3aa596b7",
            "default_route_table_id": "rtb-03cc2e59ff8bea75f",
            "default_security_group_id": "sg-02d6bd508259c7718",
            "dhcp_options_id": "dopt-0abc561021b3ac1cf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08b41e68c645b5d80",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03cc2e59ff8bea75f",
            "owner_id": "153886836866",
            "tags": {
              "Name": "Wal VPC"
            },
            "tags_all": {
              "Name": "Wal VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}